# helium-client-python

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  Makefile  README.md  genindex.html  index.html  objects.inv  reference.html  search.html  searchindex.js  setup.cfg  setup.py
_static/: bizstyle.js
docs/: Makefile  conf.py  index.rst  reference.rst
examples/: basic.py
helium_client/: __init__.py  _helium.c  _helium.pxd  _helium.pyx  _serial.c  _version.py  helium_client.c
src/: chelium_client.pxd  helium-serial.c  helium_client.c  helium_client.pyx  helium_serial.c  helium_serial.h
